--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,6 @@
+/* Material theme */
+@import '@angular/material/prebuilt-themes/azure-blue.css';
+
 /* Import design tokens */
 @import './styles/variables.css';
 
@@ -15,6 +18,11 @@ body {
   color: var(--color-text-primary);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+/* Fix Material overlay z-index to be above modals */
+.cdk-overlay-container {
+  z-index: 2000 !important;
 }
 
 /* Reset box-sizing */
