fix(historic): consultation historique
       - fix download_url parameter
       - add mimeType to backend response
       - set /api/files/download/** api endpoint to public
       - fix Upload button behaviour on invalid form

--- a/frontend/src/app/shared/components/file-upload-modal/file-upload-modal.component.html
+++ b/frontend/src/app/shared/components/file-upload-modal/file-upload-modal.component.html
@@ -171,7 +171,7 @@
                     mat-raised-button 
                     color="primary"
                     type="submit"
-                    [disabled]="!canUpload() || isUploading()">
+                    [disabled]="!canUpload() || isUploading() || uploadForm.invalid">
                     <mat-icon>cloud_upload</mat-icon>
                     @if (isUploading()) {
                       Upload en cours...
