docs(TESTING): add TESTING.md documentation
          - add own files download curl tests document
          - update swagger.json with new endpoint GET /api/download/owner/{token}
          - improve infra diagram
          - sanitize documentation
          - set tests threshold to 70%
          - change mkdocs right menu depth

--- a/docs/css/neoteroi-mkdocs.css
+++ b/docs/css/neoteroi-mkdocs.css
@@ -1397,3 +1397,7 @@ details .nt-timeline.vertical.center:not(.alternate) .nt-timeline-item .nt-timel
   box-shadow: 0 0.05rem 0 var(--md-default-bg-color) inset;
   transition: background-color 125ms;
 }
+
+.md-sidebar--secondary .md-nav__list .md-nav__list {
+    display: none
+  }
